--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <html>
+ <head> 
+  <title>张东升</title>  
+ </head>
+ <body background="lian.jpg" background-size="100%">
+<center><img src="lian.jpg" position='fixed' width="100%" height="120%"></img></center>
+ </body>
 <h1>张东升</h1>
 </html>
