--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
  <head> 
   <title>张东升</title>  
  </head>
- <body>
+ <body background="#000">
 <center><img src="lian.jpg" position='fixed' width="100%" height="120%"></img></center>
  </body>
-<h1>张东升</h1>
 </html>
