--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
  </head>
  <body background="#000">
 <center><img src="lian.jpg" position='fixed' width="100%" height="120%"></img></center>
-<a href="exiuapp://carowner.app/openwith?name=zhangsan&age=26">启动应用程序</a>  
+<a href="exiuapp://owner.114995.com/openwith?name=zhangsan&age=26">启动应用程序</a>  
  </body>
 </html>
