--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <html>
- <head> 
-  <title>张东升</title>  
- </head>
+ <head>  
+<meta http-equiv="Content-Type"  content="text/html;charset=gb2312">  
+<script type="text/javascript">  
+function javacalljs(){  
+     document.getElementById("content").innerHTML +=     
+         "<br\>java调用了js函数";  
+}  
+  
+function javacalljswithargs(arg){  
+     document.getElementById("content").innerHTML +=     
+         ("<br\>"+arg);  
+}  
+  
+</script>  
+</head>  
  <body background="#000">
 <center><img src="lian.jpg" position='fixed' width="100%" height="120%"></img></center>
-<a href="exiuapp://owner.114995.com/openwith?name=zhangsan&age=26">启动应用程序</a>  
+this is my html <br/>  
+<a onClick="window.wst.startFunction()">点击调用java代码</a><br/>  
+<a onClick="window.wst.startFunction('hello world')" >点击调用java代码并传递参数</a>  
+<br/>  
+<div id="content">内容显示</div>   
  </body>
 </html>
